--- a/PositionIn/ProductDetails/PositionIn.EventDetailsViewController.xib
+++ b/PositionIn/ProductDetails/PositionIn.EventDetailsViewController.xib
@@ -40,7 +40,7 @@
                             <rect key="frame" x="0.0" y="252" width="600" height="48"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$99" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eMi-0H-hX8">
-                                    <rect key="frame" x="10" y="15" width="25.5" height="18"/>
+                                    <rect key="frame" x="10" y="15" width="26" height="18"/>
                                     <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="15"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <nil key="highlightedColor"/>
@@ -57,10 +57,10 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="A9g-V6-spc">
-                            <rect key="frame" x="0.0" y="300" width="600" height="100.5"/>
+                            <rect key="frame" x="0.0" y="300" width="600" height="100"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The Forest" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vXA-Ry-YIz">
-                                    <rect key="frame" x="10" y="10" width="580" height="25.5"/>
+                                    <rect key="frame" x="10" y="10" width="580" height="26"/>
                                     <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="21"/>
                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                     <nil key="highlightedColor"/>
@@ -69,7 +69,7 @@
                                     </userDefinedRuntimeAttributes>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.09 miles" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CGP-Qf-MYX">
-                                    <rect key="frame" x="10" y="45" width="580" height="18"/>
+                                    <rect key="frame" x="44" y="45" width="546" height="18"/>
                                     <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="15"/>
                                     <color key="textColor" red="0.70196078429999997" green="0.086274509799999996" blue="0.20784313730000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
@@ -86,19 +86,22 @@
                                         <userDefinedRuntimeAttribute type="string" keyPath="text" value=""/>
                                     </userDefinedRuntimeAttributes>
                                 </label>
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="eventPeopleAttending" translatesAutoresizingMaskIntoConstraints="NO" id="PDh-MM-kpM">
+                                    <rect key="frame" x="11" y="43" width="25" height="21"/>
+                                </imageView>
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <constraints>
-                                <constraint firstItem="CGP-Qf-MYX" firstAttribute="leading" secondItem="Rnm-FN-YEx" secondAttribute="leading" id="0Uv-5X-YgB"/>
+                                <constraint firstItem="CGP-Qf-MYX" firstAttribute="leading" secondItem="Rnm-FN-YEx" secondAttribute="leading" constant="34" id="0Uv-5X-YgB"/>
                                 <constraint firstItem="Rnm-FN-YEx" firstAttribute="top" secondItem="CGP-Qf-MYX" secondAttribute="bottom" constant="10" id="8bW-rU-chK"/>
-                                <constraint firstItem="CGP-Qf-MYX" firstAttribute="leading" secondItem="vXA-Ry-YIz" secondAttribute="leading" id="Nsq-rq-kGT"/>
+                                <constraint firstItem="CGP-Qf-MYX" firstAttribute="leading" secondItem="vXA-Ry-YIz" secondAttribute="leading" constant="34" id="Nsq-rq-kGT"/>
                                 <constraint firstAttribute="bottom" secondItem="Rnm-FN-YEx" secondAttribute="bottom" constant="10" id="YOM-i0-d9V"/>
                                 <constraint firstItem="vXA-Ry-YIz" firstAttribute="top" secondItem="A9g-V6-spc" secondAttribute="top" constant="10" id="Zkc-3D-2mW"/>
                                 <constraint firstAttribute="trailing" secondItem="vXA-Ry-YIz" secondAttribute="trailing" constant="10" id="eLn-iu-eXr"/>
                                 <constraint firstItem="CGP-Qf-MYX" firstAttribute="trailing" secondItem="vXA-Ry-YIz" secondAttribute="trailing" id="gpQ-lf-uC9"/>
                                 <constraint firstItem="vXA-Ry-YIz" firstAttribute="leading" secondItem="A9g-V6-spc" secondAttribute="leading" constant="10" id="gwq-UT-yEc"/>
                                 <constraint firstItem="CGP-Qf-MYX" firstAttribute="trailing" secondItem="Rnm-FN-YEx" secondAttribute="trailing" id="m1a-nx-KxK"/>
-                                <constraint firstItem="CGP-Qf-MYX" firstAttribute="top" secondItem="vXA-Ry-YIz" secondAttribute="bottom" constant="10" id="vx3-TF-vi5"/>
+                                <constraint firstItem="CGP-Qf-MYX" firstAttribute="top" secondItem="vXA-Ry-YIz" secondAttribute="bottom" constant="9" id="vx3-TF-vi5"/>
                             </constraints>
                         </view>
                         <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" style="plain" rowHeight="45" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="veO-FX-15o" customClass="TableView" customModule="PosInCore">
@@ -140,5 +143,6 @@
     </objects>
     <resources>
         <image name="eventDetailsPlaceholder" width="375" height="172"/>
+        <image name="eventPeopleAttending" width="22" height="22"/>
     </resources>
 </document>
