--- a/PositionIn/ProductDetails/PositionIn.PromotionDetailsViewController.xib
+++ b/PositionIn/ProductDetails/PositionIn.PromotionDetailsViewController.xib
@@ -34,7 +34,7 @@
                             <rect key="frame" x="0.0" y="252" width="600" height="48"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$99" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wu2-gs-oy4">
-                                    <rect key="frame" x="10" y="15" width="25.5" height="18"/>
+                                    <rect key="frame" x="10" y="15" width="26" height="18"/>
                                     <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="15"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <nil key="highlightedColor"/>
@@ -54,7 +54,7 @@
                             <rect key="frame" x="0.0" y="300" width="600" height="101"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The Forest" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jOH-eI-DHE">
-                                    <rect key="frame" x="10" y="10" width="580" height="25.5"/>
+                                    <rect key="frame" x="10" y="10" width="580" height="26"/>
                                     <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="21"/>
                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                     <nil key="highlightedColor"/>
@@ -63,7 +63,7 @@
                                     </userDefinedRuntimeAttributes>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.09 miles" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vnj-oB-x5O">
-                                    <rect key="frame" x="10" y="46" width="580" height="18"/>
+                                    <rect key="frame" x="42" y="46" width="548" height="18"/>
                                     <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="15"/>
                                     <color key="textColor" red="1" green="0.73333333329999995" blue="0.31764705879999999" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
@@ -80,15 +80,18 @@
                                         <userDefinedRuntimeAttribute type="string" keyPath="text" value=""/>
                                     </userDefinedRuntimeAttributes>
                                 </label>
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="promotionDiscount" translatesAutoresizingMaskIntoConstraints="NO" id="R1p-pj-I6d">
+                                    <rect key="frame" x="11" y="44" width="24" height="21"/>
+                                </imageView>
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <constraints>
                                 <constraint firstAttribute="bottom" secondItem="6vD-w9-isT" secondAttribute="bottom" constant="10" id="4Uh-Nt-0sF"/>
                                 <constraint firstAttribute="trailing" secondItem="jOH-eI-DHE" secondAttribute="trailing" constant="10" id="4aS-gK-Fz0"/>
                                 <constraint firstItem="Vnj-oB-x5O" firstAttribute="top" secondItem="jOH-eI-DHE" secondAttribute="bottom" constant="10" id="5r9-pv-wuS"/>
-                                <constraint firstItem="Vnj-oB-x5O" firstAttribute="leading" secondItem="6vD-w9-isT" secondAttribute="leading" id="6hP-Xt-GpO"/>
+                                <constraint firstItem="Vnj-oB-x5O" firstAttribute="leading" secondItem="6vD-w9-isT" secondAttribute="leading" constant="32" id="6hP-Xt-GpO"/>
                                 <constraint firstItem="jOH-eI-DHE" firstAttribute="top" secondItem="vVB-RK-h3e" secondAttribute="top" constant="10" id="7my-u1-fBf"/>
-                                <constraint firstItem="Vnj-oB-x5O" firstAttribute="leading" secondItem="jOH-eI-DHE" secondAttribute="leading" id="9g1-FW-5Gv"/>
+                                <constraint firstItem="Vnj-oB-x5O" firstAttribute="leading" secondItem="jOH-eI-DHE" secondAttribute="leading" constant="32" id="9g1-FW-5Gv"/>
                                 <constraint firstItem="6vD-w9-isT" firstAttribute="top" secondItem="Vnj-oB-x5O" secondAttribute="bottom" constant="10" id="BmU-6K-q0P"/>
                                 <constraint firstItem="Vnj-oB-x5O" firstAttribute="trailing" secondItem="jOH-eI-DHE" secondAttribute="trailing" id="FNE-n3-9Oo"/>
                                 <constraint firstItem="Vnj-oB-x5O" firstAttribute="trailing" secondItem="6vD-w9-isT" secondAttribute="trailing" id="G1K-h5-esa"/>
@@ -134,5 +137,6 @@
     </objects>
     <resources>
         <image name="PromotionDetailsPlaceholder" width="375" height="172"/>
+        <image name="promotionDiscount" width="22" height="22"/>
     </resources>
 </document>
