--- a/PositionIn/Views/FeedListCells/PositionIn.PostListCell.xib
+++ b/PositionIn/Views/FeedListCells/PositionIn.PostListCell.xib
@@ -18,6 +18,7 @@
                         <rect key="frame" x="2" y="2" width="69" height="69"/>
                         <constraints>
                             <constraint firstAttribute="width" relation="lessThanOrEqual" constant="80" id="Q5a-Is-YRy"/>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="69" id="i8j-3P-WfX"/>
                             <constraint firstAttribute="width" secondItem="7AG-PS-UOU" secondAttribute="height" multiplier="1:1" id="nc4-L3-TqF"/>
                         </constraints>
                     </imageView>
