--- a/PositionIn/Views/FeedListCells/PositionIn.ProductListCell.xib
+++ b/PositionIn/Views/FeedListCells/PositionIn.ProductListCell.xib
@@ -18,7 +18,7 @@
                         <rect key="frame" x="2" y="2" width="69" height="69"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="RJf-1C-axm" secondAttribute="height" multiplier="1:1" id="RNt-rX-LAH"/>
-                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="80" id="eac-DM-wdp"/>
+                            <constraint firstAttribute="width" constant="69" id="eac-DM-wdp"/>
                         </constraints>
                     </imageView>
                     <view alpha="0.69999999999999973" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="I0E-6Z-tMw">
